--- a/training.automation.appium/packages.config
+++ b/training.automation.appium/packages.config
@@ -1,8 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Appium.WebDriver" version="3.0.0.2" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
+  <package id="NUnit" version="3.11.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
