--- a/training.automation.common/training.automation.common.csproj
+++ b/training.automation.common/training.automation.common.csproj
@@ -99,7 +99,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Appium\Elements\Button.cs" />
     <Compile Include="Appium\Elements\Common\Element.cs" />
+    <Compile Include="Appium\Elements\InputBox.cs" />
     <Compile Include="Page\Page.cs" />
     <Compile Include="Pop-up\Pop-up.cs" />
     <Compile Include="Program.cs" />
