--- a/training.automation.winium/packages.config
+++ b/training.automation.winium/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="InputSimulator" version="1.0.4.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NHamcrest" version="2.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.11.0" targetFramework="net461" />
   <package id="NUnit.Console" version="3.10.0" targetFramework="net461" />
@@ -12,6 +14,7 @@
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.6" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="2.48.0" targetFramework="net461" />
+  <package id="SpecFlow" version="2.4.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="Winium.WebDriver" version="0.1.1" targetFramework="net461" />
 </packages>
